# ic3ia-Modulo-Theories-with-Implicit-Abstraction

./: .gitlab-ci.yml  .hg_archival.txt  CMakeLists.txt  api.cpp  ia.cpp  ia.h  ic3.cpp  ic3.h  ic3ia.cpp  ic3ia_python.i  invred.cpp  invred.h  live.cpp  main.cpp  opts.h  output.txt  proof.cpp  proof.h  proofchecker.py  python_api_setup.py  solver.cpp  solver.h  utils.cpp  utils.h
examples/: FibonacciSequence_reach.moxi  FibonacciSequence_reach.vmt  FibonacciSequence_unreach.smt2  FibonacciSequence_unreach.vmt  count2.vmt  recount4.vmt
